# employees_time_manager_app

./: README.md  design.excalidraw  pyproject.toml
